packages/next-swc/crates/core/tests/errors/next-font-loaders/too-many-args/input.js
import { Inter } from '@next/font/google'
const inter = Inter({}, 10)
